# solana-transfers

./: Anchor.toml  readme.md
app/: angular.json  package.json  tsconfig.json
app/src/: consts.ts  idl.json  polyfills.ts  styles.scss
app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
programs/solana-task/: Cargo.toml
programs/solana-task/src/: lib.rs
tests/: solana-task.ts
